syntax = "proto3";

option csharp_namespace = "CurrencyConversion";

import "google/protobuf/wrappers.proto";

package currency_conversion;

service ConversionServiceProto {
  rpc Convert (ConversionRequestProto) returns (ConversionResultProto);
  rpc CurrencyExists (google.protobuf.Int64Value) returns (CurrencyExistsResultProto); 
}

message ConversionRequestProto {
  int64 fromCurrencyCode = 1;
  int64 toCurrencyCode = 2;
  DecimalProto amount = 3;
}

message ConversionResultProto {
  repeated string messages = 1;
  bool succeeded = 2;
  optional ConversionResponseProto data = 3;
}

message CurrencyExistsResultProto {
  repeated string messages = 1;
  bool succeeded = 2;
  bool data = 3;
}

message ConversionResponseProto {
  DecimalProto fromAmount = 1;
  DecimalProto toAmount = 2;
}

message DecimalProto {
  sint32 v1 = 1;
  sint32 v2 = 2;
  sint32 v3 = 3;
  sint32 v4 = 4;
}